@@ -39,6 +39,20 @@ http {
     #nchan_use_redis on;
     #nchan_channel_events_channel_id 'events';
     
+    location ~ /pubredis/(\w+)$ {
+      nchan_publisher;
+      nchan_channel_id $1;
+      nchan_channel_group test;
+      nchan_use_redis on;
+    }
+    
+    location ~ /subredis/(\w+)$ {
+      nchan_subscriber;
+      nchan_channel_id $1;
+      nchan_channel_group test;
+      nchan_use_redis on;
+    }
+    
     location ~ /sub/events {
       nchan_subscriber;
       nchan_channel_group meta;
